# op

./: .gitignore  INSTALL.md  README.md  install.ps1  op.json.example  op.snapshot.json.example  pyproject.toml  requirements.txt
op_cli/: __init__.py  __main__.py  diff.py  promote.py  register.py  validate.py
op_gateway/: __init__.py  backend_pool.py  catalog.py  diff.py  dispatch.py  events.py  manifest.py  meta_ops.py  paths.py  probe.py  server.py  spawn_patch.py
tests/: conftest.py  fake_backend_mcp.py  test_backend_pool.py  test_catalog.py  test_diff.py  test_dispatch.py  test_events.py  test_manifest.py  test_meta_ops_with_pool.py  test_promote.py  test_reconcile.py  test_register.py  test_schema_diff.py
