[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "op-gateway"
version = "0.1.0"
description = "Single MCP server that proxies to every other MCP server registered on this machine"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
include = ["op_gateway*", "op_cli*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
